--- a/AgencyProject/secondpage.html
+++ b/AgencyProject/secondpage.html
@@ -59,7 +59,7 @@
     <h2 class="text-center mb-4">Gallery</h2>
     <div class="row" >
       <div class="col-md-4 mb-4" v-for="glry in galleryData">
-        <img :src="glry.imgSrc" class="img-fluid gallery" alt="Gallery Item 0">
+        <img :src="'pictures/'+glry.imgSrc" class="img-fluid gallery" alt="Gallery Item 0">
       </div>
       <!-- <div class="col-md-4 mb-4">
         <img src="image/7-07-2.png" class="img-fluid gallery" alt="Gallery Item 1">
