--- a/AgencyProject/secondpage.html
+++ b/AgencyProject/secondpage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"> <!-- 連結外部樣式表 -->
 
-    <!-- 引入 Vue -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.47"></script>
-
-    <!-- 引入 jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- 引入 Vue -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@3.2.47"></script>
+  
+  <!-- 引入 jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -34,79 +33,26 @@
     </div>
   </nav>
 
-  <!-- Banner with Parallax -->
-  <div class="parallax banner">
-    <h1>Welcome to My Portfolio</h1>
-    <p>.Capture your brilliant moments for you.</p>
+  <!-- Gallery Section -->
+  <div id="gallerysc">
+    <section id="gallery" class="container py-5">
+      <h2 class="text-center mb-4">Gallery</h2>
+      <div class="row">
+        <div class="col-md-4 mb-4" v-for="glry in galleryData" :key="glry.id">
+          <img :src="'pictures/' + glry.imgSrc" class="img-fluid gallery" alt="Gallery Item">
+        </div>
+      </div>
+    </section>
   </div>
 
-  <!-- About Section -->
-  <section id="about" class="content-section">
-    <h2 class="text-center mb-4">About</h2>
-    <p class="text-center">I am a photographer and visual designer based in Taipei, Taiwan. My work spans editorial,
-      creative direction, and commercial photography.</p>
-  </section>
-
-  <div class="parallax about">
-    <h2>Explore the World of Creativity</h2>
-  </div>
-
-
-
-  <!-- Gallery -->
-   <div id="gallerysc">
-  <section id="gallery" class="container py-5">
-    <h2 class="text-center mb-4">Gallery</h2>
-    <div class="row" >
-      <div class="col-md-4 mb-4" v-for="glry in galleryData">
-        <img :src="'pictures/'+glry.imgSrc" class="img-fluid gallery" alt="Gallery Item 0">
-      </div>
-      <!-- <div class="col-md-4 mb-4">
-        <img src="image/7-07-2.png" class="img-fluid gallery" alt="Gallery Item 1">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/7-07-2.png" class="img-fluid gallery" alt="Gallery Item 2">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="image/7-07-3.png" class="img-fluid gallery" alt="Gallery Item 3">
-      </div> -->
-    </div>
-  </section>
-</div>
-
-  <!-- Shop Section -->
-  <section id="MY SERVE" class="content-section">
-    <h2 class="text-center mb-4">MY SERVE</h2>
-    <div class="row">
-      <div class="col-md-6">
-        <h4><P>Potography</h4>
-        <p>Explore unique handcrafted patterns designed for you.</p>
-      </div>
-      <div class="col-md-6">
-        <h4>3D Modeling</h4>
-        <p>Discover a collection of hats, scarves, and mittens.</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="parallax shop">
-    <h2>Capture want you want</h2>
-  </div>
-
-  <!-- Footer -->
   <footer class="footer">
     <p>© 2024 Fran Style | Follow us on <a href="#" class="text-light">Instagram</a></p>
   </footer>
 
-  <script src="https://www.instagram.com/0523_samli/"></script>
+  <script src="js/bs5vue.js"></script>
+  <script src="./js/vue.min.js"></script>
 
-</body>
-
-   <!-- Theme JavaScript -->
-   <script src="js/bs5vue.js"></script>
-
-   <script src="./js/vue.min.js"></script>
-<script>
+  <script>
     new Vue({
       el: "#gallerysc", // 指定 Vue 實例作用的元素
       data: {
@@ -115,23 +61,20 @@
       mounted() {
         // 在實例被創建之後執行，通常用來發送獲取資料的請求
         this.fetchgalleryData();
- 
       },
       methods: {
         fetchgalleryData() {
-          // 使用 Ajax 或其他方法向後端發送請求，並將資料設置到 works 中
-          // 這裡假設你的後端提供了一個 /api/works 的 API
-          fetch("/glry")
+          fetch("./glry.json")  // 假設您有一個本地的 JSON 文件
             .then((response) => response.json())
             .then((data) => {
-              this.galleryData = data; // 將後端傳回的資料設置到 works 中
+              this.galleryData = data; // 將後端傳回的資料設置到 galleryData 中
             })
             .catch((error) => {
-              console.error("Error fetching galley data:", error);
+              console.error("Error fetching gallery data:", error);
             });
         },
       },
     });
   </script>
-
+</body>
 </html>
