--- a/AgencyProject/index.html
+++ b/AgencyProject/index.html
@@ -15,31 +15,36 @@
     <div class="hero-content text-center text-light">
       <h1>Spring Portfolio</h1>
       <p>Capture your moments, discover creativity.</p>
-      <a href="secondpage.html" class="btn btn-primary btn-lg mt-3">Enter Website</a>
+      <a href="/main" class="btn btn-primary btn-lg mt-3">Enter Website</a>
     </div>
   </div>
 
   <!-- Content Section -->
   <section class="content">
     <div class="container py-5">
-      <p class="text-center">Scroll down to discover the world of creativity!</p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer bg-dark text-center text-light py-3">
-    <p>© 2024 Fran Style | Designed with love</p>
+    <p>© 2024 Fran Style | Follow us on <a href="https://www.instagram.com/0523_samli/" class="text-light">Instagram</a>
+    </p>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
   <!-- JavaScript for Scroll Effect -->
   <script>
-    window.addEventListener("scroll", function () {
-      const hero = document.querySelector(".hero");
-      let scrollY = window.scrollY;
-
-      // Adjust scale based on scroll position
-      let scaleValue = 1 + scrollY / 1000;
-      hero.style.transform = `scale(${scaleValue})`;
+    gsap.to('.hero', {
+      scrollTrigger: {
+        trigger: '.hero',     // 觸發元素
+        start: 'top',         // 開始位置
+        end: 'bottom',        // 結束位置
+        scrub: true,         // 動畫跟隨滾動
+        markers: false,        // 顯示標記（用於調試）
+        toggleActions: "restart restart pause pause"  // 定義動畫行為
+      },
+      scale: 1.65              
     });
   </script>
 </body>
